[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110
exclude = "migrations"

[tool.isort]
profile = "black"
line_length = 110
skip = ["migrations"]

[tool.pylint.format]
max-line-length = 110

[tool.pylint.messages_control]
disable = [
    "no-self-use",
]
