[metadata]
name = django-hashers-passlib
version =  attr: hashers_passlib.VERSION_STR
author = Mathias Ertl
author_email = mati@er.tl
description = Django hashers using passlib
long_description = This library provides password hashers for the hash schemes provided by passlib for
 Djangos password hashing framework. Unlike passlibs ``passlib.apps.django``, it does not replace Djangos
 password hashing framework but adds additional hashers to its built in framework.
long_description_content_type = text/x-rst

 Please see https://github.com/mathiasertl/django-hashers-passlib for more information and documentation.
url = https://github.com/mathiasertl/django-hashers-passlib
license = GNU General Public License (GPL) v3
classifiers =
	Development Status :: 6 - Mature
	Programming Language :: Python :: 3 :: Only
    Environment :: Other Environment
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration :: Authentication/Directory

[options]
include_package_data = true
install_requires =
    passlib>=1.7
    Django>=3.2
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
